rename to asp.net core

--- a/Angular2AspNetCoreStarter/wwwroot/index.html
+++ b/Angular2AspNetCoreStarter/wwwroot/index.html
@@ -10,7 +10,7 @@
     <script src="./jspm_packages/system.js"></script>
     <script src="./config.js"></script>
 </head>
-<body>imag
+<body>
     <app>Loading...</app>
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
