--- a/Angular2AspNetCoreStarter/App/about/about.html
+++ b/Angular2AspNetCoreStarter/App/about/about.html
@@ -1,4 +1,2 @@
 ﻿<h2>{{about.title}}</h2>
-<h3>{{about.message}}</h3>
-
-<p>Use this area to provide additional information.</p>
+<p>{{about.message}}</p>
