--- a/Angular2AspNetCoreStarter/wwwroot/index.html
+++ b/Angular2AspNetCoreStarter/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>Angular2 Asp 5 Starter Kit</title>
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/angular2-polyfills.js"></script>
     <script src="./jspm_packages/system.js"></script>
     <script src="./config.js"></script>
 </head>
