update landing page

--- a/Angular2AspNetCoreStarter/App/app.html
+++ b/Angular2AspNetCoreStarter/App/app.html
@@ -2,6 +2,6 @@
     <navigation></navigation>
     <router-outlet></router-outlet>
     <footer>
-        <p>&copy; 2016 - Angular2 Asp.net 5 Starter Kit</p>
+        <p>&copy; 2016 - Angular2/Asp.net Core Starter Kit</p>
     </footer>
 </div>
