--- a/Angular2AspNetCoreStarter/App/home/home.html
+++ b/Angular2AspNetCoreStarter/App/home/home.html
@@ -1,1 +1,14 @@
-﻿<h2>This is the home page!</h2>
+﻿<div class="jumbotron">
+    <div class="container">
+        <h1>Angular2/Asp.net Starter Template</h1>
+        <p>
+            Use this template as a starting point for a web app.
+        </p>
+        <ul>
+            <li>Angular 2 for client side code and routing</li>
+            <li>ASP.NET Core for server side code - access via API controllers</li>
+        </ul>
+    </div>
+</div>
+<p>Source code at: <a href="https://github.com/ryanlangton/angular2-aspnetcore-starter">https://github.com/ryanlangton/angular2-aspnetcore-starter</a></p>
+
