--- a/Angular2AspNetCoreStarter/App/home/home.html
+++ b/Angular2AspNetCoreStarter/App/home/home.html
@@ -1,14 +1,12 @@
 ﻿<div class="jumbotron">
     <div class="container">
-        <h1>Angular2/Asp.net Starter Template</h1>
-        <p>
-            Use this template as a starting point for a web app.
-        </p>
+        <h1>Angular2 + Asp.net</h1>
+        <h2>Starter Template</h2>
+        <p>Use this template as a starting point for a web app.</p>
         <ul>
             <li>Angular 2 for client side code and routing</li>
-            <li>ASP.NET Core for server side code - access via API controllers</li>
+            <li>ASP.NET Core for server side code, API</li>
         </ul>
     </div>
 </div>
 <p>Source code at: <a href="https://github.com/ryanlangton/angular2-aspnetcore-starter">https://github.com/ryanlangton/angular2-aspnetcore-starter</a></p>
-
